kustomize/jelly-stack/overseerr/overseerr-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.253.18
  selector:
    app: overseerr
  type: LoadBalancer
  ports:
    - port: 5055
      targetPort: overseerr
