kustomize/jelly-stack/overseerr/overseerr-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ovs-k8s.vinicima.com`) || Host(`ovs.vinicima.com`)
      kind: Rule
      services:
        - name: overseerr
          port: 5055
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima-com-tls
